--- a/study2/job-talk-s2.Rmd
+++ b/study2/job-talk-s2.Rmd
@@ -43,6 +43,9 @@ source("../scripts/custom-structure-learning/cog-model-jags-tools.R")
 # orig_TableDAGscore.alias <- BiDAG:::TableDAGscore.alias # save to switch back if desired
 
 source("../study1/vacc_import_data.R", chdir = TRUE)
+
+
+ibm_palette <- c("#648fff", "#785ef0", "#dc267f", "#fe6100", "#ffb000")
 ```
 
 # Set up data
@@ -141,7 +144,7 @@ plt.valid <- test_analyze %>%
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 )
 
-ggsave(plot = plt.valid, filename = "../local/s1_predobs_plot.png", width=8.5, height=4)
+# ggsave(plot = plt.valid, filename = "../local/s1_predobs_plot.png", width=8.5, height=4)
 ```
 
 ## network structure (beautified)
@@ -276,7 +279,7 @@ g_legend <- function(a.gplot){
 
 legend <- g_legend(legend_plot)
 
-ggsave(plot = legend, filename = "../local/legend.png")
+# ggsave(plot = legend, filename = "../local/legend.png")
 ```
 
 
@@ -466,7 +469,7 @@ g_diffs <- ggplot(d_diffs,
                      # limits = c(-3, 3), 
                      # breaks = seq(-3, 3, 1)) +
   # scale_color_brewer(palette = "Set1", direction = -1) +
-  scale_color_manual(values=ibm_palette[c(1,3)]) +
+  scale_color_manual(values=ibm_palette[c(3,1)]) + # this is a hack to make it match other fig
   theme_bw(base_size=14) +
   theme(
     legend.position = "bottom",
@@ -509,7 +512,7 @@ stderr <- function(x) {
   )
 )
 
-ggsave(plot = vacc_intent_change_plot, filename = "../local/s2_vacc_intent.png", height=4, width=5)
+# ggsave(plot = vacc_intent_change_plot, filename = "../local/s2_vacc_intent.png", height=4, width=5)
 ```
 
 
