--- a/study2/vacc_manyBelief_study2_analysis.Rmd
+++ b/study2/vacc_manyBelief_study2_analysis.Rmd
@@ -20,68 +20,15 @@ library(rms)
 
 # Data prep
 
+```{r}
+source("./load-study2-data.R")
+```
+
 ```{r tidy, include = F}
-# load data
-d_all <- read.csv("../data/study2_data.csv")[-1]
-
-# reformat to match previous analyses (i.e., 2 rows per participant)
-d_demo <- d_all %>% 
-  select(workerId, condition, gender, age, ethnicity, education, job, income,
-         political_party, political_beliefs, eligible_pretest, 
-         is_parent_posttest, children_num_posttest, children_oldest_posttest, 
-         children_youngest_posttest, plan_parent_posttest,
-         starts_with("flushot_"), starts_with("vax_"), starts_with("attention_"),
-         starts_with("comments"), starts_with("duration"))
-d_pre <- d_all %>% 
-  select(workerId, ends_with("_pretest")) %>%
-  select(-c(eligible_pretest, starts_with("flushot_"), starts_with("vax_"), 
-            starts_with("attention_"), starts_with("comments"), 
-            starts_with("duration"))) %>%
-  rename_all(funs(gsub("_pretest", "", .))) %>%
-  mutate(phase = "pre")
-d_post <- d_all %>% 
-  select(workerId, ends_with("_posttest")) %>%
-  select(-c(is_parent_posttest, children_num_posttest, children_oldest_posttest,
-            children_youngest_posttest, plan_parent_posttest,
-            starts_with("flushot_"), starts_with("vax_"), starts_with("attention_"),
-            starts_with("comments"), starts_with("duration"))) %>%
-  rename_all(funs(gsub("_posttest", "", .))) %>%
-  mutate(phase = "post")
-
-d <- bind_rows(d_pre, d_post) %>% 
-  gather(question, response, -c(workerId, phase)) %>%
-  mutate(phase = factor(phase,
-                        levels = c("pre", "post")),
-         reverse_cat = ifelse(grepl("_[1-9]r$", question), TRUE, FALSE),
-         # NOTE: "response" has already been reverse coded!
-         question = factor(question),
-         scale = factor(gsub("_.*$", "", question),
-                        levels = c("vaccIntent", "vaccDanger", "vaccEff", 
-                                   "vaccStrain", "vaccTox", 
-                                   "diseaseSevere", "diseaseRare", 
-                                   "infantImmLimCap", "infantImmWeak", 
-                                   "medSkept", "hb", "nat", 
-                                   "overpar", "parentExpert"))) %>%
-  full_join(d_demo) %>%
-  mutate(condition = factor(condition, levels = c("noInterv", "diseaseRisk"))) %>%
-  filter(!is.na(response), !is.na(workerId), !is.na(condition)) %>%
-  distinct()
-
 # how many left?
 d %>% distinct(workerId, condition) %>% count(condition)
 ```
 
-```{r scores, include = F}
-# score all scales
-d_scored <- d %>%
-  select(workerId, condition, phase, scale, response,
-         gender:duration_posttest) %>%
-  group_by(workerId, condition, phase, scale) %>%
-  mutate(response = as.numeric(response)) %>%
-  summarise(mean = mean(response, na.rm = TRUE)) %>%
-  ungroup() %>%
-  distinct()
-```
 
 # Score distributions
 
@@ -493,18 +440,18 @@ Here pre_response could be the response on the overall pre-test scale, or the in
 devtools::source_gist(id = "f1994c0f8325abbc5d300600744af39d", filename="cbrm.R")
 
 library(brms)
-fit_ord <- cbrm(response ~ condition * phase + (1|workerId) + (1|question),
-               data = d %>%
-                    filter(scale=="vaccIntent") %>%
-                    mutate(
-                      condition = relevel(condition, ref="noInterv"),
-                      response = response + 4),
-               family=cumulative(),
-               control = list(adapt_delta = .85),
-               cores = parallel::detectCores(),
-               iter = 2000,
-               cached_file = "fit_ord.rds")
-summary(fit_ord)
+# fit_ord <- cbrm(response ~ condition * phase + (1|workerId) + (1|question),
+#                data = d %>%
+#                     filter(scale=="vaccIntent") %>%
+#                     mutate(
+#                       condition = relevel(condition, ref="noInterv"),
+#                       response = response + 4),
+#                family=cumulative(),
+#                control = list(adapt_delta = .85),
+#                cores = parallel::detectCores(),
+#                iter = 2000)
+#                # cached_file = "fit_ord.rds")
+# summary(fit_ord)
 ```
 
 ### Predicting post-test
@@ -529,14 +476,14 @@ d1 <- d %>%
 
 
 ```{r}
-fit_ord2 <- cbrm(post ~ condition + preMean + (1|workerId) + (1|question),
-               data=d1,
-               family=cumulative(),
-               control = list(adapt_delta = .85),
-               cores = parallel::detectCores(),
-               iter = 2000,
-               cached_file = "fit_ord2.rds")
-summary(fit_ord2)
+# fit_ord2 <- cbrm(post ~ condition + preMean + (1|workerId) + (1|question),
+#                data=d1,
+#                family=cumulative(),
+#                control = list(adapt_delta = .85),
+#                cores = parallel::detectCores(),
+#                iter = 2000)
+#                # cached_file = "fit_ord2.rds")
+# summary(fit_ord2)
 ```
 
 
