--- a/study2/vacc_manyBelief_study2_overpar.Rmd
+++ b/study2/vacc_manyBelief_study2_overpar.Rmd
@@ -34,66 +34,7 @@ library(rms)
 This is a document where we do a "deep dive" on the "Overparenting" scale, which is one of the scales we are least able to predict movement in after the Disease Risk intervention - and a case that we think might be involved meaningful interactions with other scales (e.g., Disease Severity, Medical Skepticism).
 
 ```{r tidy, include = F}
-# load data
-d_all <- read.csv("../data/study2_data.csv")[-1]
-
-# reformat to match previous analyses (i.e., 2 rows per participant)
-d_demo <- d_all %>% 
-  select(workerId, condition, gender, age, ethnicity, education, job, income,
-         political_party, political_beliefs, eligible_pretest, 
-         is_parent_posttest, children_num_posttest, children_oldest_posttest, 
-         children_youngest_posttest, plan_parent_posttest,
-         starts_with("flushot_"), starts_with("vax_"), starts_with("attention_"),
-         starts_with("comments"), starts_with("duration"))
-d_pre <- d_all %>% 
-  select(workerId, ends_with("_pretest")) %>%
-  select(-c(eligible_pretest, starts_with("flushot_"), starts_with("vax_"), 
-            starts_with("attention_"), starts_with("comments"), 
-            starts_with("duration"))) %>%
-  rename_all(funs(gsub("_pretest", "", .))) %>%
-  mutate(phase = "pre")
-d_post <- d_all %>% 
-  select(workerId, ends_with("_posttest")) %>%
-  select(-c(is_parent_posttest, children_num_posttest, children_oldest_posttest,
-            children_youngest_posttest, plan_parent_posttest,
-            starts_with("flushot_"), starts_with("vax_"), starts_with("attention_"),
-            starts_with("comments"), starts_with("duration"))) %>%
-  rename_all(funs(gsub("_posttest", "", .))) %>%
-  mutate(phase = "post")
-
-d <- bind_rows(d_pre, d_post) %>% 
-  gather(question, response, -c(workerId, phase)) %>%
-  mutate(phase = factor(phase,
-                        levels = c("pre", "post")),
-         reverse_cat = ifelse(grepl("_[1-9]r$", question), TRUE, FALSE),
-         # NOTE: "response" has already been reverse coded!
-         question = factor(question),
-         scale = factor(gsub("_.*$", "", question),
-                        levels = c("vaccIntent", "vaccDanger", "vaccEff", 
-                                   "vaccStrain", "vaccTox", 
-                                   "diseaseSevere", "diseaseRare", 
-                                   "infantImmLimCap", "infantImmWeak", 
-                                   "medSkept", "hb", "nat", 
-                                   "overpar", "parentExpert"))) %>%
-  full_join(d_demo) %>%
-  mutate(condition = factor(condition, levels = c("noInterv", "diseaseRisk"))) %>%
-  filter(!is.na(response), !is.na(workerId), !is.na(condition)) %>%
-  distinct()
-
-# how many left?
-# d %>% distinct(workerId, condition) %>% count(condition)
-```
-
-```{r scores, include = F}
-# score all scales
-d_scored <- d %>%
-  select(workerId, condition, phase, scale, response,
-         gender:duration_posttest) %>%
-  group_by(workerId, condition, phase, scale) %>%
-  mutate(response = as.numeric(response)) %>%
-  summarise(mean = mean(response, na.rm = TRUE)) %>%
-  ungroup() %>%
-  distinct()
+source("../scripts/load-data-s2.R")
 ```
 
 # Reliability
@@ -592,19 +533,19 @@ summary(fit)
 I don't think any of these interaction terms are coming out "significant." Certainly all the phasepost:conditionDR involved ones are not. Closest looks like phasepost:conditionDR:overpar:medskept.
 
 ```{r}
-fit_pre <- brm(
-  vaccIntent ~ overpar * medSkept * diseaseSevere + (1|workerId),
-  prior = set_prior("normal(0,.5)", class = "b"),
-  family = Beta(),
-  data = d_bn %>% 
-    mutate(vaccIntent = rescale_beta(vaccIntent, -3, 3), workerId = 1:nrow(d_bn)),
-  control = list(adapt_delta = .90, max_treedepth = 15),
-  chains = 2,
-  cores = 2
-)
+# fit_pre <- brm(
+#   vaccIntent ~ overpar * medSkept * diseaseSevere + (1|workerId),
+#   prior = set_prior("normal(0,.5)", class = "b"),
+#   family = Beta(),
+#   data = d_bn %>% 
+#     mutate(vaccIntent = rescale_beta(vaccIntent, -3, 3), workerId = 1:nrow(d_bn)),
+#   control = list(adapt_delta = .90, max_treedepth = 15),
+#   chains = 2,
+#   cores = 2
+# )
 ```
 
 ```{r}
-summary(fit_pre)
+# summary(fit_pre)
 ```
 
